--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
       rel="stylesheet"
     />
-    <title>GOGOSING App</title>
+    <title>AMAZON</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
